// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render column with ascending sort icon 1`] = `
<section>
  <div
    class="tableContainer"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell clickable"
          >
            <button>
              Title
              <span
                aria-label="su-angle-up"
                class="su-angle-up headerCellSortIcon"
              />
            </button>
          </th>
          <th
            class="headerCell clickable"
          >
            <button>
              Description
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              Title 1
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              Description 1
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <label
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </label>
    </span>
    <span
      class="display"
    >
      of 3
    </span>
    <button
      class="previous"
      disabled=""
    >
      <span
        aria-label="su-angle-left"
        class="su-angle-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-angle-right"
        class="su-angle-right"
      />
    </button>
  </nav>
</section>
`;

exports[`Render column with descending sort icon 1`] = `
<section>
  <div
    class="tableContainer"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell clickable"
          >
            <button>
              Title
            </button>
          </th>
          <th
            class="headerCell clickable"
          >
            <button>
              Description
              <span
                aria-label="su-angle-down"
                class="su-angle-down headerCellSortIcon"
              />
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              Title 1
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              Description 1
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <label
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </label>
    </span>
    <span
      class="display"
    >
      of 3
    </span>
    <button
      class="previous"
      disabled=""
    >
      <span
        aria-label="su-angle-left"
        class="su-angle-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-angle-right"
        class="su-angle-right"
      />
    </button>
  </nav>
</section>
`;

exports[`Render data with all different visibility types schema 1`] = `
<section>
  <div
    class="tableContainer"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell clickable"
          >
            <button>
              Description
            </button>
          </th>
          <th
            class="headerCell clickable"
          >
            <button>
              Test 1
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              Description 1
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            />
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              Description 2
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <label
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </label>
    </span>
    <span
      class="display"
    >
      of 5
    </span>
    <button
      class="previous"
    >
      <span
        aria-label="su-angle-left"
        class="su-angle-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-angle-right"
        class="su-angle-right"
      />
    </button>
  </nav>
</section>
`;

exports[`Render data with pencil button when onItemEdit callback is passed 1`] = `
<section>
  <div
    class="tableContainer"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerButtonCell headerCell"
          >
            <span>
              <span
                aria-label="su-pen"
                class="su-pen"
              />
            </span>
          </th>
          <th
            class="headerCell clickable"
          >
            <button>
              Description
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="buttonCell cell"
          >
            <div
              class="cellContent"
            >
              <button>
                <span
                  aria-label="su-pen"
                  class="su-pen"
                />
              </button>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              Description 1
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="buttonCell cell"
          >
            <div
              class="cellContent"
            >
              <button>
                <span
                  aria-label="su-pen"
                  class="su-pen"
                />
              </button>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              Description 2
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <label
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </label>
    </span>
    <span
      class="display"
    >
      of 3
    </span>
    <button
      class="previous"
      disabled=""
    >
      <span
        aria-label="su-angle-left"
        class="su-angle-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-angle-right"
        class="su-angle-right"
      />
    </button>
  </nav>
</section>
`;

exports[`Render data with schema 1`] = `
<section>
  <div
    class="tableContainer"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell clickable"
          >
            <button>
              Description
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              Description 1
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              Description 2
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <label
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </label>
    </span>
    <span
      class="display"
    >
      of 5
    </span>
    <button
      class="previous"
    >
      <span
        aria-label="su-angle-left"
        class="su-angle-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-angle-right"
        class="su-angle-right"
      />
    </button>
  </nav>
</section>
`;

exports[`Render data with schema and selections 1`] = `
<section>
  <div
    class="tableContainer"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell"
          >
            <span>
              <label
                class="label"
              >
                <span
                  class="switch checkbox light"
                >
                  <input
                    type="checkbox"
                  />
                  <span />
                </span>
              </label>
            </span>
          </th>
          <th
            class="headerCell clickable"
          >
            <button>
              Description
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell small"
          >
            <div
              class="cellContent"
            >
              <label
                class="label"
              >
                <span
                  class="switch checkbox dark"
                >
                  <input
                    checked=""
                    type="checkbox"
                    value="1"
                  />
                  <span>
                    <span
                      aria-label="su-check"
                      class="su-check"
                    />
                  </span>
                </span>
              </label>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              Description 1
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell small"
          >
            <div
              class="cellContent"
            >
              <label
                class="label"
              >
                <span
                  class="switch checkbox dark"
                >
                  <input
                    type="checkbox"
                    value="2"
                  />
                  <span />
                </span>
              </label>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              Description 2
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell small"
          >
            <div
              class="cellContent"
            >
              <label
                class="label"
              >
                <span
                  class="switch checkbox dark"
                >
                  <input
                    checked=""
                    type="checkbox"
                    value="3"
                  />
                  <span>
                    <span
                      aria-label="su-check"
                      class="su-check"
                    />
                  </span>
                </span>
              </label>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              Description 3
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <label
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </label>
    </span>
    <span
      class="display"
    >
      of 3
    </span>
    <button
      class="previous"
      disabled=""
    >
      <span
        aria-label="su-angle-left"
        class="su-angle-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-angle-right"
        class="su-angle-right"
      />
    </button>
  </nav>
</section>
`;

exports[`Render data with schema in different order 1`] = `
<section>
  <div
    class="tableContainer"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell clickable"
          >
            <button>
              Description
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              Description 1
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              Description 2
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <label
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </label>
    </span>
    <span
      class="display"
    >
      of 3
    </span>
    <button
      class="previous"
    >
      <span
        aria-label="su-angle-left"
        class="su-angle-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-angle-right"
        class="su-angle-right"
      />
    </button>
  </nav>
</section>
`;

exports[`Render data with schema not containing all fields 1`] = `
<section>
  <div
    class="tableContainer"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr />
      </thead>
      <tbody>
        <tr
          class="row"
        />
        <tr
          class="row"
        />
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <label
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </label>
    </span>
    <span
      class="display"
    >
      of 3
    </span>
    <button
      class="previous"
      disabled=""
    >
      <span
        aria-label="su-angle-left"
        class="su-angle-left"
      />
    </button>
    <button
      class="next"
    >
      <span
        aria-label="su-angle-right"
        class="su-angle-right"
      />
    </button>
  </nav>
</section>
`;
